--- a/battleship.css
+++ b/battleship.css
@@ -3,16 +3,22 @@ body {background-color: black}
 #mainText {color:white}
 #board table {margin:10px auto}
 #board td {border:3px solid;border-color:green;width:40px;height:40px}
-.hit img {width:37px}
+img {width:37px}
 .missed {color:white;text-align:center;font-size:25px}
+#ships div{margin-top:10px}
+.shipSunk{opacity:0.2}
 @media only screen and (min-width:72em){
 #board td {width:76px;height:76px}
-.hit img {width:70px}
+img {width:70px}
 .missed {font-size:50px}
+#ships div{margin-top:50px}
 }
 
 
 #mistakes p{font-size:25px}
 #divName {display:none; margin:0 auto}
 #btnName {width:100%}
-#results {display:none;}
+#results-container {display:none;}
+#gram {display:block;margin:0 auto}
+#results{margin-top:30px}
+#message{margin:1px auto}
